--- a/.github/workflows/main_sample-3533.yml
+++ b/.github/workflows/main_sample-3533.yml
@@ -1,7 +1,7 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action   
-# More GitHub Actions for Azure: https://github.com/Azure/actions   
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action 
+# More GitHub Actions for Azure: https://github.com/Azure/actions 
 
-name: Build and deploy Java project to Azure Function App - sample-3533
+name: Build and deploy Java project to Azure Function App
 
 on:
   push:
@@ -9,38 +9,29 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  AZURE_FUNCTIONAPP_NAME: sample-3533
-  PACKAGE_DIRECTORY: '.' # directory containing pom.xml
-  JAVA_VERSION: '17'
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
-      - name: Setup Java SDK ${{ env.JAVA_VERSION }}
+      - name: Setup Java SDK
         uses: actions/setup-java@v4
         with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin' # or 'adoptium', 'zulu', etc.
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: 'Build Project with Maven'
         run: |
-          pushd './${{ env.PACKAGE_DIRECTORY }}'
           mvn clean package
-          popd
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
-        id: fa
         with:
           app-name: 'sample-3533'
           slot-name: 'Production'
-          package: '${{ env.PACKAGE_DIRECTORY }}'
+          package: '.'
           respect-pom-xml: true
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AAD13D02B86C42C9B37761FD3522C6F8 }}
           sku: 'flexconsumption'
