--- a/.github/workflows/main_sample-3533.yml
+++ b/.github/workflows/main_sample-3533.yml
@@ -34,4 +34,5 @@ jobs:
           slot-name: 'Production'
           package: '.'
           respect-pom-xml: true
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
           sku: 'flexconsumption'
